<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.focusgroupheroican.RegistroActivity" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    <include layout="@layout/toolbar"/>
	    <ScrollView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        >
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin">
		        
			<EditText 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/email"
		        android:id="@+id/reg_txtEmail"
		        android:layout_marginBottom="@dimen/div_reg"
		        />
			<EditText 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/nombre"
		        android:id="@+id/reg_txtNombre"
		        android:layout_marginBottom="@dimen/div_reg"
		        />
			<TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/genero"
			    android:gravity="center"
			    />
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginBottom="@dimen/div_reg"
		        >
		        <Button
		            android:id="@+id/reg_btnMas"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:layout_height="wrap_content"
		            android:text="@string/masculino"
		            android:textSize="@dimen/font_micro"
		            android:textColor="@color/textColor"
		            android:background="@drawable/selector_dark"/>
		        <Button
		            android:id="@+id/reg_btnFem"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:layout_height="wrap_content"
		            android:text="@string/femenino"
		            android:textSize="@dimen/font_micro"
		            android:textColor="@color/textColor"
		            android:background="@drawable/selector_dark"/>
			</LinearLayout>
			<TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/edad"
			    android:gravity="center"
			    android:id="@+id/reg_txtEdad"
			    />
			<SeekBar
			    android:id="@+id/reg_seekEdad"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="@dimen/div_reg"
			    />
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/cargo"
			    />
			<Spinner
			    android:id="@+id/reg_spinCargo"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="@dimen/div_reg"
			    />
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:background="@color/primary"
			    >
			<Button 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/reg_btn"
			    android:text="@string/continuar"
			    android:textColor="@color/white"
			    android:background="@drawable/selector_dark"
			    />
			</LinearLayout>
		</LinearLayout>
		</ScrollView>
	    </LinearLayout>
	        
</RelativeLayout>
